--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <div id="locations-near-you"></div>
 
-      <script defer src="https://maps.googleapis.com/maps/api/js?libraries=geometry&key=AIzaSyAhaNYGgiJwsGPtbQaD57W4hXe98GcaNAc&callback=createSearchableMap"></script>
+      <script defer src="https://maps.googleapis.com/maps/api/js?libraries=geometry&key=APIKEYHERE&callback=createSearchableMap"></script>
       <script src="createSearchableMap.js"></script>
     </div>
   </body>
